--- a/public/js/views/landing.html
+++ b/public/js/views/landing.html
@@ -1,6 +1,4 @@
 
-<!-- <div class="row-fluid">&nbsp</div> -->
-
 <div class="container">
 	<div class="row-fluid">
 		<div class="span10">
@@ -40,20 +38,20 @@
 				<div class="control-group">
 					<label class="control-label" for="inputEmail">Email</label>
 					<div class="controls">
-						<input type="text" id="inputEmail" placeholder="Email">
+						<input type="text" id="email" placeholder="Email">
 					</div>
 				</div>
 
 				<div class="control-group">
 					<label class="control-label" for="inputPassword">Password</label>
 					<div class="controls">
-						<input type="password" id="inputPassword" placeholder="Password">
+						<input type="password" id="pw" placeholder="Password">
 					</div>
 				</div>
 
 				<div class="control-group">
 					<div class="controls">
-						<label class="checkbox">
+						<label id="keep_logged_in" class="checkbox">
 							<input type="checkbox"> Keep me logged in
 						</label>
 						<button id="login_signup" type="submit" class="btn">Sign In / Login</button>
@@ -72,7 +70,13 @@
 				When you bring <a href=".">Devimon</a> up on your browser, the browser maintains a conversation with  <a href=".">Devimon</a>.
 				As soon as your browser stops talking (when the laptop is closed), <a href=".">Devimon</a> assumes that somebody has closed the laptop, possibly with the intention of stealing it, and sends you an immediate SMS message. 
 			</p>
-	</div>
+		</div>
 
 	</div>
 </div>
+
+<script type="text/template" id="template-logged">
+	<span id="onoff" class="label label-important" style="font-size:5em; line-height:100px; cursor:pointer;">Offline</span>
+	<br>
+	<span class="label label-info" style="font-size:5em; line-height:100px;"><abbr title="Phone Number">P:</abbr> {{phone}}</span>
+</script>
