--- a/public/js/views/landing.html
+++ b/public/js/views/landing.html
@@ -32,6 +32,9 @@
 		</div>
 		<div class="span6" id="interact">
 			<h5>Sign Up</h5>
+
+			<span class="label label-important" style="font-size:2em; line-height:20px; cursor:pointer;">Not yet supported</span>
+
 			<hr>
 			<div class="form-horizontal">
 
