--- a/public/js/views/landing.html
+++ b/public/js/views/landing.html
@@ -39,14 +39,14 @@
 			<div class="form-horizontal">
 
 				<div class="control-group">
-					<label class="control-label" for="inputEmail">Email</label>
+					<label class="control-label" for="email">Email</label>
 					<div class="controls">
 						<input type="text" id="email" placeholder="Email">
 					</div>
 				</div>
 
 				<div class="control-group">
-					<label class="control-label" for="inputPassword">Password</label>
+					<label class="control-label" for="password">Password</label>
 					<div class="controls">
 						<input type="password" id="pw" placeholder="Password">
 					</div>
@@ -81,5 +81,22 @@
 <script type="text/template" id="template-logged">
 	<span id="onoff" class="label label-important" style="font-size:5em; line-height:100px; cursor:pointer;">Offline</span>
 	<br>
-	<span class="label label-info" style="font-size:5em; line-height:100px;"><abbr title="Phone Number">P:</abbr> {{phone}}</span>
+	{{#phone}}
+		<span class="label label-info" style="font-size:5em; line-height:100px;">
+			<abbr title="Phone Number">P:</abbr> {{phone}}
+		</span>
+	{{/phone}}
+
+	{{^phone}}
+		<h2>Oops, I don't have your phone number...</h2>
+		<div class="row-fluid">
+			<input id="input_phone_number" type="text" class="pull-right" placeholder="eg. 123 456 7890" style="width:300px;">
+		</div>
+		<div class="row-fluid">
+			<a id="btn_phone_number" class="btn btn-default pull-right">Here you go<a>
+		</div>
+	{{/phone}}
+
+
+	
 </script>
