--- a/public/js/views/landing.html
+++ b/public/js/views/landing.html
@@ -33,7 +33,7 @@
 		<div class="span6" id="interact">
 			<h5>Sign Up</h5>
 
-			<span class="label label-important" style="font-size:2em; line-height:20px; cursor:pointer;">Not yet supported</span>
+			<span class="label label-important" style="font-size:2em; line-height:20px; cursor:pointer;">Almost done. Launching soon :)</span>
 
 			<hr>
 			<div class="form-horizontal">
