--- a/public/js/views/landing.html
+++ b/public/js/views/landing.html
@@ -82,7 +82,7 @@
 <ul>
 	<li>email confirmation</li>
 	<li>payment</li>
-	<li>US number support</li>
+	<li>US number support : done</li>
 	<li>Google analytic</li>
 	<li>backend production config</li>
 	<li>A, CNAME update : done</li>
