donation added, count increaments instead of decreaments :) marks devimon as a free service

--- a/public/js/views/templates.html
+++ b/public/js/views/templates.html
@@ -10,7 +10,7 @@
 
 		<div class="row-fluid">
 			<div class="span8">
-				Trials Remaining : <span class="badge badge-info">{{remaining}}</span>
+				Devimon has served you <span class="badge badge-info">{{used}}</span> times!
 			</div>
 
 			<button id="logout" class="btn btn-inverse pull-right" style="margin-top:20px;">Logout</button>
