alpha version done

--- a/public/js/views/templates.html
+++ b/public/js/views/templates.html
@@ -10,10 +10,10 @@
 
 		<div class="row-fluid">
 			<div class="span8">
-				Devimon has served you <span class="badge badge-info">{{used}}</span> times!
+				Devimon has served you <span class="badge badge-inverse">{{used}}</span> times!
 			</div>
 
-			<button id="logout" class="btn btn-inverse pull-right" style="margin-top:20px;">Logout</button>
+			<button id="logout" class="btn btn-inverse pull-right" style="margin-top:20px; margin-bottom:10px;">Logout</button>
 		</div>
 	{{/phone}}
 
